--- a/PI-Dogs-main/client/package.json
+++ b/PI-Dogs-main/client/package.json
@@ -16,8 +16,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
     "sass-loader": "^13.0.2",
-    "web-vitals": "^2.1.4",
-    "sass": "^1.43.4"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "predeploy": "npm run build",
